--- a/dbus-cxx/ChangeLog
+++ b/dbus-cxx/ChangeLog
@@ -1,5 +1,8 @@
 2010-01-04  Rick L. Vinyard, Jr. <rvinyard@cs.nmsu.edu>
 
+	* dbus-cxx.spec.m4:
+	* ChangeLog, Makefile.am, configure.ac, dbuscxx.kdevelop: =====
+	  0.5.1 =====
 	* dbus-cxx/messageappenditerator.cpp: Fix bug in subiter not set to
 	  NULL. Caused problems when creating a second child container.
 
